k8s/namespace_qKet.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: REMOVED-prod
  labels:
    name: REMOVED-prod # NetworkPolicy namespaceSelectr
---
apiVersion: v1
kind: Namespace
metadata:
  name: REMOVED-dev
  labels:
    name: REMOVED-dev
