k8s/deploy_https_AWS.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qket-frontend

spec:
  revisionHistoryLimit: 2
  replicas: 1

  selector:
    matchLabels:
      app: qket-frontend

  template:
    metadata:
      labels:
        app: qket-frontend

    spec:
      containers:
        - name: qket-frontend
          image: 727646470302.dkr.ecr.ap-northeast-2.amazonaws.com/team5/ecr/qket:1.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000

          resources:
            limits:
              cpu: "1"
              memory: "500Mi"
            requests:
              cpu: "0.5"
              memory: "250Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: qket-frontend-service

spec:
  type: ClusterIP

  ports:
    - port: 80
      targetPort: 3000

  selector:
    app: qket-frontend
