k8s/deploy_https_AWS_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-backend
  template:
    metadata:
      labels:
        app: account-backend
    spec:
      containers:
        - name: account-backend
          image: 727646470302.dkr.ecr.ap-northeast-2.amazonaws.com/team5/ecr/REMOVED:backend-7.3.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: account-backend-service
spec:
  type: ClusterIP
  selector:
    app: account-backend
  ports:
    - port: 80
      targetPort: 8080
