k8s/deploy_https_qKet_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qket-frontend
  # TODO: 배포 환경에 따라 namespace 지정
  # namespace: qket-prod
  # namespace: qket-dev

spec:
  revisionHistoryLimit: 2
  replicas: 1
  # TODO: prod 배포 시 replicas: 2 이상으로 변경

  selector:
    matchLabels:
      app: qket-frontend

  template:
    metadata:
      labels:
        app: qket-frontend

    spec:
      containers:
        - name: qket-frontend
          # TODO: 배포 시 최신 이미지 태그로 업데이트
          image: 727646470302.dkr.ecr.ap-northeast-2.amazonaws.com/team5/ecr/qket:frontend-7.1
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          resources:
            limits:
              cpu: "1"
              memory: "500Mi"
            requests:
              cpu: "0.5"
              memory: "250Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: qket-frontend-service
  # TODO: namespace 추가 (Deployment와 동일)

spec:
  type: ClusterIP  # ALB Ingress가 외부 트래픽을 여기로 라우팅

  ports:
    - port: 80
      targetPort: 3000

  selector:
    app: qket-frontend
