k8s/07_ingress_https_qket.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: REMOVED-alb-ingress
  # TODO: namespace 추가
  # namespace: ticketbox-prod

  # // namespace 추가
  namespace: qKet-prod

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # ACM 인증서
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:727646470302:certificate/a9789e71-7453-43d9-b0db-ad2ac973f4c0

    # HTTP → HTTPS 리다이렉트
    alb.ingress.kubernetes.io/ssl-redirect: "443"

    # HTTP 80 / HTTPS 443 리스너 생성
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    # TODO: prod는 전체 허용, dev Ingress에는 아래 주석 해제 후 허용 IP 입력
    # alb.ingress.kubernetes.io/inbound-cidrs: "내IP/32"

spec:
  ingressClassName: alb

  rules:
    # TODO: 도메인을 app.lcy0813.click 으로 변경
    - host: app.lcy0813.click
      http:
        paths:
          # TODO: /api 경로 제거 — 백엔드는 Next.js 내부 프록시로만 접근해야 함
          #       외부에서 /api 직접 호출 차단이 목적
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: REMOVED-backend-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: REMOVED-frontend-service
                port:
                  number: 80
