k8s/ingress_https_qket.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-alb-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # 🌟 복사한 ACM ARN 주소를 여기에 대입!
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:727646470302:certificate/a9789e71-7453-43d9-b0db-ad2ac973f4c0

    # HTTP(80) ➔ HTTPS(443) 자동 리다이렉트
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  ingressClassName: alb
  rules:
    - host: app.jun979.click
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: account-backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextjs-frontend-service
                port:
                  number: 80
